--- a/Curricularizacao/Views/Atividade/Edit.cshtml
+++ b/Curricularizacao/Views/Atividade/Edit.cshtml
@@ -1,20 +1,31 @@
 @model Curricularizacao.Models.Atividade
+
 @{
     ViewData["Title"] = "Editar Atividade";
 }
 
-<h2>Editar Atividade</h2>
+<h1>@ViewData["Title"]</h1>
 
+<h4>Atividade</h4>
+<hr />
 <form asp-action="Edit">
-    <input type="hidden" asp-for="Id" />
-
     <div class="form-group">
-        <label asp-for="Descricao"></label>
+        <label asp-for="Descricao" class="control-label"></label>
         <input asp-for="Descricao" class="form-control" />
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <div class="form-group">
+        <label asp-for="MaxParticipantes" class="control-label"></label>
+        <input asp-for="MaxParticipantes" class="form-control" />
+        <span asp-validation-for="MaxParticipantes" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Salvar</button>
+    </div>
 </form>
 
-<a asp-action="Index" class="btn btn-secondary">Voltar</a>
+<div>
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+</div>
