--- a/Curricularizacao/Views/Matricula/Details.cshtml
+++ b/Curricularizacao/Views/Matricula/Details.cshtml
@@ -1,36 +1,26 @@
 @model Curricularizacao.Models.Matricula
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes da Matrícula";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>Matricula</h4>
+    <h4>Matrícula</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Atividade)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Atividade.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Aluno)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aluno.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataMatricula)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataMatricula)
-        </dd>
+        <dt class="col-sm-2">Aluno</dt>
+        <dd class="col-sm-10">@Model.Aluno.Nome</dd>
+
+        <dt class="col-sm-2">Atividade</dt>
+        <dd class="col-sm-10">@Model.Atividade.Descricao</dd>
+
+        <dt class="col-sm-2">Data da Matrícula</dt>
+        <dd class="col-sm-10">@Model.DataMatricula.ToString("dd/MM/yyyy HH:mm:ss")</dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary">Voltar</a>
 </div>
