--- a/Curricularizacao/Views/Shared/_Layout.cshtml
+++ b/Curricularizacao/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
         <h1>@ViewData["Title"]</h1>
         @RenderBody()
     </div>
+
+    @RenderSection("Scripts", required: false)
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
