--- a/Curricularizacao/Views/Aluno/Index.cshtml
+++ b/Curricularizacao/Views/Aluno/Index.cshtml
@@ -1,13 +1,10 @@
-@model IEnumerable<Curricularizacao.Models.Aluno>
-@{
-    ViewData["Title"] = "Alunos";
-}
-
 <table class="table">
     <thead>
         <tr>
             <th>Nome</th>
+            <th>Endereço</th>
             <th>Telefone</th>
+            <th>Ativo</th>
             <th>Ações</th>
         </tr>
     </thead>
@@ -16,14 +13,15 @@
         {
             <tr>
                 <td>@aluno.Nome</td>
+                <td>@aluno.Endereco</td>
                 <td>@aluno.Telefone</td>
+                <td>@(aluno.Ativo ? "Sim" : "Não")</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@aluno.Id" class="btn btn-info">Detalhes</a> | 
-                    <a asp-action="Edit" asp-route-id="@aluno.Id" class="btn btn-warning">Editar</a> | 
+                    <a asp-action="Edit" asp-route-id="@aluno.Id" class="btn btn-info">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@aluno.Id" class="btn btn-warning">Detalhes</a> |
                     <a asp-action="Delete" asp-route-id="@aluno.Id" class="btn btn-danger">Excluir</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-<a asp-action="Create" class="btn btn-primary">Adicionar Aluno</a>
