--- a/Curricularizacao/Views/Home/Index.cshtml
+++ b/Curricularizacao/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
-﻿<h2>Bem-vindo ao Sistema de Curricularização</h2>
+﻿
+<img src="logo.png" class="logo-marca"></img>
+<br>
 <ul>
-    <li><a href="/Aluno">Gerenciar Alunos</a></li>
-    <li><a href="/Professor">Gerenciar Professores</a></li>
-    <li><a href="/Atividade">Gerenciar Atividades</a></li>
-    <li><a href="/Matricula">Gerenciar Matrículas</a></li>
+    <br>
+    <a href="/Aluno"><button class="btn btn-primary">Gerenciar Alunos</button></a>
+    <a href="/Professor"><button class="btn btn-primary">Gerenciar Professores</button></a>
+    <a href="/Atividade"><button class="btn btn-primary">Gerenciar Atividades</button></a>
+    <a href="/Matricula"><button class="btn btn-primary">Gerenciar Matrículas</button></a>
 </ul>
