--- a/Curricularizacao/Views/Aluno/Edit.cshtml
+++ b/Curricularizacao/Views/Aluno/Edit.cshtml
@@ -16,17 +16,17 @@
         <span asp-validation-for="Endereco" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="NumeroEndereco"></label>
+        <label asp-for="NumeroEndereco">Numero</label>
         <input asp-for="NumeroEndereco" class="form-control" />
         <span asp-validation-for="NumeroEndereco" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="NomeMae"></label>
+        <label asp-for="NomeMae">Nome da Mae</label>
         <input asp-for="NomeMae" class="form-control" />
         <span asp-validation-for="NomeMae" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="NomePai"></label>
+        <label asp-for="NomePai">Nome do Pai</label>
         <input asp-for="NomePai" class="form-control" />
         <span asp-validation-for="NomePai" class="text-danger"></span>
     </div>
@@ -36,10 +36,16 @@
         <span asp-validation-for="Telefone" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="DataNascimento"></label>
+        <label asp-for="DataNascimento">Data de Nascimento</label>
         <input asp-for="DataNascimento" class="form-control" type="date" />
         <span asp-validation-for="DataNascimento" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="Ativo" class="control-label"></label>
+        <input asp-for="Ativo" type="checkbox" class="form-check-input" />
+        <span asp-validation-for="Ativo" class="text-danger"></span>
+    </div>
+    <br>
     <button type="submit" class="btn btn-success">Salvar</button>
     <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
 </form>
