--- a/Curricularizacao/Views/Atividade/Create.cshtml
+++ b/Curricularizacao/Views/Atividade/Create.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Criar Atividade";
 }
 
-<h1>@ViewData["Title"]</h1>
-
 <h4>Atividade</h4>
 <hr />
 <form asp-action="Create">
@@ -16,16 +14,13 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="MaxParticipantes" class="control-label"></label>
+        <label asp-for="MaxParticipantes" class="control-label">Máximo de Participantes</label>
         <input asp-for="MaxParticipantes" class="form-control" />
         <span asp-validation-for="MaxParticipantes" class="text-danger"></span>
     </div>
-
+    <br>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Criar</button>
+        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
     </div>
 </form>
-
-<div>
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
-</div>
