--- a/Curricularizacao/Views/Atividade/Edit.cshtml
+++ b/Curricularizacao/Views/Atividade/Edit.cshtml
@@ -4,28 +4,23 @@
     ViewData["Title"] = "Editar Atividade";
 }
 
-<h1>@ViewData["Title"]</h1>
-
 <h4>Atividade</h4>
 <hr />
 <form asp-action="Edit">
     <div class="form-group">
-        <label asp-for="Descricao" class="control-label"></label>
+        <label asp-for="Descricao" class="control-label">Descrição</label>
         <input asp-for="Descricao" class="form-control" />
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="MaxParticipantes" class="control-label"></label>
+        <label asp-for="MaxParticipantes" class="control-label">Máximo de Participantes</label>
         <input asp-for="MaxParticipantes" class="form-control" />
         <span asp-validation-for="MaxParticipantes" class="text-danger"></span>
     </div>
-
+    <br>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Salvar</button>
+        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
     </div>
 </form>
-
-<div>
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
-</div>
