--- a/Curricularizacao/Views/Aluno/Index.cshtml
+++ b/Curricularizacao/Views/Aluno/Index.cshtml
@@ -1,3 +1,10 @@
+@model List<Curricularizacao.Models.Aluno>
+@{
+    ViewData["Title"] = "Alunos";
+}
+
+<a asp-action="Create" class="btn btn-primary">Adicionar Aluno</a>
+
 <table class="table">
     <thead>
         <tr>
